--- a/line-stack.html
+++ b/line-stack.html
@@ -65,7 +65,7 @@
       xAxis: {
         type: 'category',
         boundaryGap: false,
-        data: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun']
+        data: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],// 对应的时间节点
       },
       yAxis: {
         type: 'value'
@@ -75,7 +75,7 @@
           name: 'Default implementatio',
           type: 'line',
           stack: 'Total',
-          data: [120, 132, 101, 134, 90, 230, 210]
+          data: [120, 132, 101, 134, 90, 230, 210],// 对应事件节点的值
         },
         {
           name: 'Socket.IO with eiows',
