--- a/line-stack.html
+++ b/line-stack.html
@@ -30,7 +30,7 @@
   <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=YOUR_API_KEY"></script>
   <script type="text/javascript" src="https://fastly.jsdelivr.net/npm/echarts@5.4.1/dist/extension/bmap.min.js"></script>
   -->
-
+  <script src="./report.data.js"></script>
   <script type="text/javascript">
     var dom = document.getElementById('container');
     var myChart = echarts.init(dom, null, {
@@ -65,7 +65,8 @@
       xAxis: {
         type: 'category',
         boundaryGap: false,
-        data: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],// 对应的时间节点
+        // data: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],// 对应的时间节点
+        data: report.category,// 对应的时间节点
       },
       yAxis: {
         type: 'value'
@@ -75,25 +76,26 @@
           name: 'Default implementatio',
           type: 'line',
           stack: 'Total',
-          data: [120, 132, 101, 134, 90, 230, 210],// 对应事件节点的值
+          // data: [120, 132, 101, 134, 90, 230, 210],// 对应事件节点的值
+          data: report.ws,// 对应事件节点的值
         },
         {
           name: 'Socket.IO with eiows',
           type: 'line',
           stack: 'Total',
-          data: [220, 182, 191, 234, 290, 330, 310]
+          data: report.eiows
         },
         {
           name: 'Socket.IO with uws',
           type: 'line',
           stack: 'Total',
-          data: [150, 232, 201, 154, 190, 330, 410]
+          data: report.uws
         },
         {
           name: 'Plain Websocket server',
           type: 'line',
           stack: 'Total',
-          data: [320, 332, 301, 334, 390, 330, 320]
+          data: report.plain_ws
         },
       ]
     };
